Chap 2 en cours

--- a/bib/phd_bib.bib
+++ b/bib/phd_bib.bib
@@ -1049,18 +1049,18 @@ These three challenges should lead to the proposal of a complete dual core refri
 	file = {Yih - 1980 - Advances in applied mechanics, vol. 20.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\PTMWUQPW\\Yih - 1980 - Advances in applied mechanics, vol. 20.pdf:application/pdf},
 }
 
-@book{swift_thermoacoustics_2002,
-	edition = {2001},
-	title = {Thermoacoustics: A Unifying Perspective for Some Engines and Refrigerators},
-	isbn = {978-3-319-88348-9},
-	shorttitle = {Thermoacoustics},
-	pagetotal = {348},
-	publisher = {Springer},
-	author = {Swift, Gregory W.},
-	date = {2002},
-	keywords = {Engine, Thermoacoustics, Refrigerator, Travelling waves, Standing waves, Transfer matrices},
-	file = {Swift_2001_ThermoacousticsAUnivyingPerspectiveForSomeEnginesAndRefrigerators.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\C29D79KQ\\Swift_2001_ThermoacousticsAUnivyingPerspectiveForSomeEnginesAndRefrigerators.pdf:application/pdf},
-}
+%@book{swift_thermoacoustics_2002,
+%	edition = {2001},
+%	title = {Thermoacoustics: A Unifying Perspective for Some Engines and Refrigerators},
+%	isbn = {978-3-319-88348-9},
+%	shorttitle = {Thermoacoustics},
+%	pagetotal = {348},
+%	publisher = {Springer},
+%	author = {Swift, Gregory W.},
+%	date = {2002},
+%	keywords = {Engine, Thermoacoustics, Refrigerator, Travelling waves, Standing waves, Transfer matrices},
+%	file = {Swift_2001_ThermoacousticsAUnivyingPerspectiveForSomeEnginesAndRefrigerators.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\C29D79KQ\\Swift_2001_ThermoacousticsAUnivyingPerspectiveForSomeEnginesAndRefrigerators.pdf:application/pdf},
+%}
 
 @thesis{penelet_etude_2004,
 	location = {Le Mans, France},
@@ -1505,3 +1505,32 @@ Un partenaire industriel (groupe {PSA}) et quatre laboratoires du {CNRS} (Instit
 	langid = {english},
 	file = {Johnson et al. - 1987 - Theory of dynamic permeability and tortuosity in f.pdf:C\:\\Users\\mfontbon\\ownCloud - FONTBONNE Martin@mycore.core-cloud.net\\Zotero\\storage\\6688KKIH\\Johnson et al. - 1987 - Theory of dynamic permeability and tortuosity in f.pdf:application/pdf},
 }
+
+@online{Electroac_Grains,
+author = {Bavu, \'Eric and Lissek, Hervé and Melon, Manuel and Lotton, Pierrick and Gazengel, Bruno and Durand, Stéphane and Herzog, Philippe and Penelet, Guillaume},
+title = {\'Electroacoustique},
+year = {2016},
+url = {https://electroacoustique.univ-lemans.fr/},
+}
+
+@article{swift_thermoacoustics_2002,
+  title={Thermoacoustics for liquefaction of natural gas},
+  author={Swift, Gregory W. and Wollan, John J.},
+  journal={GW Swift and JJ Wollan, GasTIPS},
+  volume={8},
+  number={4},
+  pages={21--26},
+  year={2002}
+}
+
+@inproceedings{wollan_development_2002,
+  title={Development of a thermoacoustic natural gas liquefier.},
+  author={John J. Wollan and Gregory W. Swift and Scott N. Backhaus and David L. Gardner},
+  year={2002},
+  url={https://api.semanticscholar.org/CorpusID:109674106},
+  eventtitle={AIChE New Orleans Meeting},
+  location={New Orleans, LA}
+}
+
+
+
