--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -2,12 +2,12 @@
 \mylocaltoc
 
 \section{Convection naturelle}\label{chap:EtudeExpe_ConvNat}
-Lors des expériences réalisées lors de la caractérisation du réfrigérateur \textsc{Tacot}, il a été montré que le gradient axial de température dans le noyau thermoacoustique n'est pas linéaire, et que les températures ne sont pas homogènes le long de la direction transverse du noyau \textcolor{red}{figure ?}\cite{ramadan_design_2021}. Cet écart au comportement attendu, c'est-à-dire un gradient linéaire entre les côtés froid et ambiant du noyau thermoacoustique, ainsi qu'une température radiale uniforme sur la section du noyau thermoacoustique, implique la présence d'un écoulement moyen non nul et d'effets non-linéaires dans le réfrigérateur. Parmi les hypothèses formulées quant à la cause de ces disparités avec la théorie linéaire de Rott, plusieurs hypothèses peuvent être envisagées : vent acoustique, turbulence, formation de tourbillons, génération d'harmoniques supérieures, et convection naturelle. Parmi ces effets, peu d'études portent sur cette dernière, bien qu'il ait déjà été montré que le déclenchement de moteurs ou encore l'uniformité de température sur la section y étaient très sensibles \cite{ross_influence_2003,  hireche_numerical_2019, ramadan_experimental_2018,  zhang_novel_2011}.
+Lors des expériences réalisées lors de la caractérisation du réfrigérateur \textsc{Tacot}, il a été montré que le gradient axial de température dans le noyau thermoacoustique n'est pas linéaire, et que les températures ne sont pas homogènes le long de la direction transverse du noyau \echaf{figure ?}\cite{ramadan_design_2021}. Cet écart au comportement attendu, c'est-à-dire un gradient linéaire entre les côtés froid et ambiant du noyau thermoacoustique, ainsi qu'une température radiale uniforme sur la section du noyau thermoacoustique, implique la présence d'un écoulement moyen non nul et d'effets non-linéaires dans le réfrigérateur. Parmi les hypothèses formulées quant à la cause de ces disparités avec la théorie linéaire de Rott, plusieurs hypothèses peuvent être envisagées : vent acoustique, turbulence, formation de tourbillons, génération d'harmoniques supérieures, et convection naturelle. Parmi ces effets, peu d'études portent sur cette dernière, bien qu'il ait déjà été montré que le déclenchement de moteurs ou encore l'uniformité de température sur la section y étaient très sensibles \cite{ross_influence_2003,  hireche_numerical_2019, ramadan_experimental_2018,  zhang_novel_2011}.
 
 \subsection{Dans la cavité conique entre la source acoustique principale et le noyau thermoacoustique}
 
 Pour faciliter l'analyse de la distribution de température dans le noyau thermoacoustique et ses alentours, celui-ci est découpé en cinq zones réparties le long de l'axe $\mathbf{e}_x$.
-La première étude concerne la distribution de température entre la source acoustique principale et l'échangeur froid, c'est-à-dire dans le cône d'adaptation d'impédance acoustique matérialisé en orange sur la figure~\ref{fig:SchemaGeneralTACOT}. Il est en effet initialement suspecté que la nature du gaz, les dimensions du volume dans lequel il se trouve et les conditions thermiques aux frontières permettent la mise en mouvement du fluide. Cette hypothèse est de plus appuyée par le calcul du nombre de Rayleigh $\mathrm{Ra}$ grâce à l'équation~\eqref{eq:NbrRayleigh}, et dont la valeur suffisament élevée \textcolor{red}{citation ?} est
+La première étude concerne la distribution de température entre la source acoustique principale et l'échangeur froid, c'est-à-dire dans le cône d'adaptation d'impédance acoustique matérialisé en orange sur la figure~\ref{fig:SchemaGeneralTACOT}. Il est en effet initialement suspecté que la nature du gaz, les dimensions du volume dans lequel il se trouve et les conditions thermiques aux frontières permettent la mise en mouvement du fluide. Cette hypothèse est de plus appuyée par le calcul du nombre de Rayleigh $\mathrm{Ra}$ grâce à l'équation~\eqref{eq:NbrRayleigh}, et dont la valeur suffisament élevée \echaf{citation ?} est
 
 \begin{equation}
 %	\Rayleigh_{\Delta T=\qty{5}{\degreeCelsius}}=\num{2.4e6},
@@ -95,7 +95,7 @@ L'évolution de température $\theta$ au cours de l'expérience à l'amplitude a
 
 \subsubsection{Réfrigérateur vertical}
 \paragraph{Sans acoustique}
-\textcolor{red}{ICI les manips heat only}
+\echaf{ICI les manips heat only}
 
 \begin{figure}[!ht]
     \centering
@@ -107,7 +107,7 @@ L'évolution de température $\theta$ au cours de l'expérience à l'amplitude a
 \end{figure}
 
 \paragraph{Avec acoustique}
-La figure~\ref{fig:Acou_CHXout_V1V2_Low} trace les températures mesurées dans la cavité d'adaptation d'impédance pour des expériences où le réfrigérateur est placé dans les orientations verticales présentées figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}, pour une amplitude \og faible \fg{} soit un \textit{drive ratio} $DR=\qty{.4}{\percent}$. Contrairement aux expériences horizontales où les effets de convection naturelle sont toujours présents mais pas toujours visibles, dans les expériences verticales il existe une configuration favorable à la mise en place d'une instabilité de convection naturelle de type Rayleigh-Bénard, et l'autre, inverse, qui est stable. La première configuration est l'orientation `\texttt{V1}', car la source acoustique y est en dessous du noyau thermoacoustique, car le sens du gradient de température est opposé à la gravité, tandis que la seconde est l'orientation `\texttt{V2}' où la source acoustique est au-dessus du noyau. Dans cette dernière orientation, le gradient de température est dans le même sens que la gravité, et il n'y a pas de flux de chaleur qui apparaît de manière spontanée. La première remarque concerne la différence d'aspect de l'évolution des températures entre une orientation et l'autre, malgré une axi-symétrie visible dans les deux cas et attendue au vu de la colinéarité de la dimensions axiale $\mathbf e_x$ et de la gravité $\mathbf g$. En observant les tracés en lignes tiretées, qui tracent l'évolution de la température $\theta$ au cours de l'expérience dans l'orientation `\texttt{V2}', une différence de température de \qty{3.2}{\degreeCelsius} entre l'échangeur froid du noyau et la source acoustique principale plus chaude apparaît et se maintient durant toute la durée de l'expérience. C'est d'ailleurs le plus grand écart de température relevé dans cette zone. Plus précisément, la température mesurée devant la source acoustique principale baisse \qty{.8}{\degreeCelsius} même après démarrage de celle-ci, ce qui est assez faible pour être en accord avec l'hypothèse de stabilité des températures en l'absence de flux massique causé par la convection naturelle. Dans l'orientation inverse `\texttt{V1}' représentée par les tracés en traits pleins, la différence de température apparaît également après le démarrage des sources acoustiques. Toutefois, après \qty{1800}{\second} les thermocouples sur l'axe de symétrie et en vis à vis l'un de l'autre, autrement dit devant la source acoustique principale et le thermocouple~2, affichent la même température. De manière plus générale, tous les thermocouple de cette zone d'adaptation d'impédance sont à des températures plus homogènes, puisque l'écart maximum de températures est dans ce cas de \qty{.8}{\degreeCelsius}. Un effet très remarquable pour cette orientation est l'évolution de température en deux étapes : la première, pendant laquelle la température sur l'échangeur froid diminue et qui s'étend du démarrage des sources à \qty{1100}{\second}, et la seconde, de cet instant jusqu'à la fin de l'acquisition et où un réchauffement des thermocouples sur l'échangeur froid apparaît. Il semblerait qu'il s'agisse là de la manifestations de deux effets aux constantes de temps différentes, l'effet thermoacoustique qui agit dès l'allumage des sources acoustiques et la convection naturelle, plus lente. Il est supposé que lors de la première étape, la différence de température augmente peu à peu et le nombre de Rayleigh avec elle, et ce, jusqu'au dépassement de la valeur critique de $\Rayleigh_c$. Au delà de cette valeur \textcolor{red}{que l'on peut estimer expérimentalement avec l'équation~\eqref{eq:NbrRayleigh} appliquée à la différence de température $\Delta \theta|_{t=\qty{1100}{\second}}$ ou bien quand $\partial^2_{tt}\theta=\num{0}$}, une cellule de convection de type Rayleigh-Bénard se met en place, et déplace avec le fluide en mouvement une certaine quantité de chaleur $Q_{\sf conv}$ de la source acoustique vers l'échangeur froid. Le gradient de température entre la source acoustique principale et l'échangeur froid n'étant pas fixé, les deux extrémités de la cavité d'adaptation d'impédance voient leur température converger vers un point d'équilibre, à la valeur moyenne des températures mesurées au mêmes emplacements dans l'orientation `\texttt{V2}'.
+La figure~\ref{fig:Acou_CHXout_V1V2_Low} trace les températures mesurées dans la cavité d'adaptation d'impédance pour des expériences où le réfrigérateur est placé dans les orientations verticales présentées figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}, pour une amplitude \og faible \fg{} soit un \textit{drive ratio} $DR=\qty{.4}{\percent}$. Contrairement aux expériences horizontales où les effets de convection naturelle sont toujours présents mais pas toujours visibles, dans les expériences verticales il existe une configuration favorable à la mise en place d'une instabilité de convection naturelle de type Rayleigh-Bénard, et l'autre, inverse, qui est stable. La première configuration est l'orientation `\texttt{V1}', car la source acoustique y est en dessous du noyau thermoacoustique, car le sens du gradient de température est opposé à la gravité, tandis que la seconde est l'orientation `\texttt{V2}' où la source acoustique est au-dessus du noyau. Dans cette dernière orientation, le gradient de température est dans le même sens que la gravité, et il n'y a pas de flux de chaleur qui apparaît de manière spontanée. La première remarque concerne la différence d'aspect de l'évolution des températures entre une orientation et l'autre, malgré une axi-symétrie visible dans les deux cas et attendue au vu de la colinéarité de la dimensions axiale $\mathbf e_x$ et de la gravité $\mathbf g$. En observant les tracés en lignes tiretées, qui tracent l'évolution de la température $\theta$ au cours de l'expérience dans l'orientation `\texttt{V2}', une différence de température de \qty{3.2}{\degreeCelsius} entre l'échangeur froid du noyau et la source acoustique principale plus chaude apparaît et se maintient durant toute la durée de l'expérience. C'est d'ailleurs le plus grand écart de température relevé dans cette zone. Plus précisément, la température mesurée devant la source acoustique principale baisse \qty{.8}{\degreeCelsius} même après démarrage de celle-ci, ce qui est assez faible pour être en accord avec l'hypothèse de stabilité des températures en l'absence de flux massique causé par la convection naturelle. Dans l'orientation inverse `\texttt{V1}' représentée par les tracés en traits pleins, la différence de température apparaît également après le démarrage des sources acoustiques. Toutefois, après \qty{1800}{\second} les thermocouples sur l'axe de symétrie et en vis à vis l'un de l'autre, autrement dit devant la source acoustique principale et le thermocouple~2, affichent la même température. De manière plus générale, tous les thermocouple de cette zone d'adaptation d'impédance sont à des températures plus homogènes, puisque l'écart maximum de températures est dans ce cas de \qty{.8}{\degreeCelsius}. Un effet très remarquable pour cette orientation est l'évolution de température en deux étapes : la première, pendant laquelle la température sur l'échangeur froid diminue et qui s'étend du démarrage des sources à \qty{1100}{\second}, et la seconde, de cet instant jusqu'à la fin de l'acquisition et où un réchauffement des thermocouples sur l'échangeur froid apparaît. Il semblerait qu'il s'agisse là de la manifestations de deux effets aux constantes de temps différentes, l'effet thermoacoustique qui agit dès l'allumage des sources acoustiques et la convection naturelle, plus lente. Il est supposé que lors de la première étape, la différence de température augmente peu à peu et le nombre de Rayleigh avec elle, et ce, jusqu'au dépassement de la valeur critique de $\Rayleigh_c$. Au delà de cette valeur \echaf{que l'on peut estimer expérimentalement avec l'équation~\eqref{eq:NbrRayleigh} appliquée à la différence de température $\Delta \theta|_{t=\qty{1100}{\second}}$ ou bien quand $\partial^2_{tt}\theta=\num{0}$}, une cellule de convection de type Rayleigh-Bénard se met en place, et déplace avec le fluide en mouvement une certaine quantité de chaleur $Q_{\sf conv}$ de la source acoustique vers l'échangeur froid. Le gradient de température entre la source acoustique principale et l'échangeur froid n'étant pas fixé, les deux extrémités de la cavité d'adaptation d'impédance voient leur température converger vers un point d'équilibre, à la valeur moyenne des températures mesurées au mêmes emplacements dans l'orientation `\texttt{V2}'.
 \smallskip
  
 \begin{figure}[!ht]
@@ -147,7 +147,7 @@ En revanche, la figure~\ref{fig:Acou_CHXout_V1V2_High} qui présente les résult
 \subsection{À l'intérieur du régénérateur}
 \subsubsection{Réfrigérateur horizontal}
 \paragraph{Faible amplitude acoustique}
-Les figures~\ref{fig:Acou_CHXin_H1H2_Low} à \ref{fig:Acou_AHXin_H1H2_Low} montrent les résultats à faible amplitude acoustique, pour les trois positions axiales le long du régénérateur. Dans cette configuration, le nombre de Rayleigh $\Rayleigh_p$ est de \textcolor{red}{Valeur}. 
+Les figures~\ref{fig:Acou_CHXin_H1H2_Low} à \ref{fig:Acou_AHXin_H1H2_Low} montrent les résultats à faible amplitude acoustique, pour les trois positions axiales le long du régénérateur. Dans cette configuration, le nombre de Rayleigh $\Rayleigh_p$ est de \echaf{Valeur}. 
 
 Tout d'abord, du côté de l'échangeur froid dont les résultats d'expériences sont affichés sur la figure~\ref{fig:Acou_CHXin_H1H2_Low}, une tendance similaire à ce qui a été montré dans la cavité d'adaptation d'impédance sur la figure~\ref{fig:Acou_CHXout_H1H2_Low} est visible. Notamment, la température mesurée par le thermocouple~5 placé au centre du régénérateur est la même dans les deux orientations, avec une diminution de \qty{5.2}{\degreeCelsius} par rapport à la température initiale pour l'orientation `\texttt{H1}', et de \qty{4.8}{\degreeCelsius} pour l'orientation `\texttt{H2}'. La périphérie du régénérateur, dont les températures sont acquises par les thermocouples~4~et~6, voient à l'inverse leur température varier en fonction de l'orientation. Dans l'orientation `\texttt{H1}', les températures données par les thermocouples~5~et~6 sont respectivement égales à \qty{-5.2}{\degreeCelsius} et \qty{-4.8}{\degreeCelsius}, et le thermocouple~4 indique une température de \qty{-2.9}{\degreeCelsius}. En revanche, dans l'orientation `\texttt{H2}' ce sont cette fois les thermocouples~4~et~6 qui sont proches car égaux à \qty{-3}{\degreeCelsius} et \qty{-3.2}{\degreeCelsius}, et le thermocouple~5 qui relève \qty{-4.8}{\degreeCelsius}. La symétrie par rapport au plan vertical passant par le centre du régénérateur est ainsi maintenue du côté froid intérieur du régénérateur, de même que ce que l'étude dans la cavité d'adapatation d'impédance montre le paragraphe~§\ref{chap:Acou_CHXout_H1H2_low}.
 
@@ -186,7 +186,7 @@ La température du côté de l'échangeur ambiant est tracée sur la figure~\ref
 Les figures~\ref{fig:Acou_CHXin_H1H2_Mid}, \ref{fig:Acou_Regmid_H1H2_Mid} et \ref{fig:Acou_AHXin_H1H2_Mid} tracent respectivement les températures relevées par les thermocouples \numlist{4;5;6} du côté froid du régénérateur, \numlist{7;8;9} placés au milieu de celui-ci, et \numlist{10;11;12} du côté ambiant.
 
 Pour le côté froid, des observations similaires au cas à faible amplitude acoustique peuvent être faites sur la figure~\ref{fig:Acou_CHXin_H1H2_Mid}, c'est-à-dire que ce qui se passe dans la cavité d'adaptation d'impédance se retrouve de l'autre côté de l'échangeur. En particulier, une symétrie est visible dans l'orientation `\texttt{H2}' où les thermocouples périphériques 4~et~6 sont le symétrique l'un de l'autre par rapport au plan vertical et égaux à \qty{-26.1}{\degreeCelsius}. Dans l'orientation `\texttt{H1}' en revanche, cette axisymétrie disparaît et le gradient vertical de température est visible. Toujours non linéaire, les deux thermocouples~5~et~6 situés au dessous du thermocouple~4 voient leur température à moins de \qty{2}{\degreeCelsius} d'écart, à \qty{-29.9}{\degreeCelsius} et \qty{-31.9}{\degreeCelsius}, tandis que ce dernier est \qty{9.9}{\degreeCelsius} au dessus, à \qty{-20}{\degreeCelsius}.
-De plus, sur l'axe du régénérateur la température ne dépend pas de l'orientation, contrairement à ce que montre la distribution de température dans la cavité d'adaptation d'impédance figure~\ref{fig:Acou_CHXout_H1H2_Mid}. Le thermocouple~5 qui y est placé indique en effet \qty{-29,9}{\degreeCelsius} en `\texttt{H1}' et \qty{-31.9}{\degreeCelsius} en `\texttt{H2}', soit un écart de \qty{2}{\degreeCelsius} considéré négligeable devant l'amplitude de température atteinte. Cette indépendance de l'orientation sur la température au centre du régénérateur est attendue, \textcolor{red}{puisque la forme de l'échangeur froid limite la vitesse verticale $v_{\sf ref}^{// \mathbf g}$.}
+De plus, sur l'axe du régénérateur la température ne dépend pas de l'orientation, contrairement à ce que montre la distribution de température dans la cavité d'adaptation d'impédance figure~\ref{fig:Acou_CHXout_H1H2_Mid}. Le thermocouple~5 qui y est placé indique en effet \qty{-29,9}{\degreeCelsius} en `\texttt{H1}' et \qty{-31.9}{\degreeCelsius} en `\texttt{H2}', soit un écart de \qty{2}{\degreeCelsius} considéré négligeable devant l'amplitude de température atteinte. Cette indépendance de l'orientation sur la température au centre du régénérateur est attendue, \echaf{puisque la forme de l'échangeur froid limite la vitesse verticale $v_{\sf ref}^{// \mathbf g}$.}
 
 \begin{figure}[!ht]
     \centering
@@ -197,7 +197,7 @@ De plus, sur l'axe du régénérateur la température ne dépend pas de l'orient
     \label{fig:Acou_CHXin_H1H2_Mid}
 \end{figure}
 
-Les températures mesurées au milieu du régénérateur sont tracés sur la figure~\ref{fig:Acou_Regmid_H1H2_Mid}. Il est possible d'y voir, à nouveau, les mêmes phénomènes que dans l'expérience à faible amplitude acoustique. Les deux orientations provoquent les mêmes évolutions de températures au niveau des thermocouples~\numlist{7;8;9}, avec encore une fois le thermocouple~9 au plus bas avec \qty{-10}{\degreeCelsius}, le thermcouple~8 au plus haut à \qty{0}{\degreeCelsius} en `\texttt{H1}' et \qty{4}{\degreeCelsius} en `\texttt{H2}', et le thermcouple~7 à \qty{-2}{\degreeCelsius} et \qty{.5}{\degreeCelsius} pour ces mêmes orientations. Un autre effet à remarquer est le réchauffement puis refroidissement qui se produit à l'emplacement du thermocouple~7, et dont le changement de sens se fait à $t=\qty{150}{\second}$, soit \qty{50}{\second} après le démarrage des sources acoustiques. À faible amplitude, cette tendance d'évolution est également visible, bien qu'étant plus faiblement marquée \textcolor{red}{à voir ce qu'on peut dire de ça à part que c'est un effet autre que la convection puisqu'indépendant de $\Delta T_{TA}$... }. 
+Les températures mesurées au milieu du régénérateur sont tracés sur la figure~\ref{fig:Acou_Regmid_H1H2_Mid}. Il est possible d'y voir, à nouveau, les mêmes phénomènes que dans l'expérience à faible amplitude acoustique. Les deux orientations provoquent les mêmes évolutions de températures au niveau des thermocouples~\numlist{7;8;9}, avec encore une fois le thermocouple~9 au plus bas avec \qty{-10}{\degreeCelsius}, le thermcouple~8 au plus haut à \qty{0}{\degreeCelsius} en `\texttt{H1}' et \qty{4}{\degreeCelsius} en `\texttt{H2}', et le thermcouple~7 à \qty{-2}{\degreeCelsius} et \qty{.5}{\degreeCelsius} pour ces mêmes orientations. Un autre effet à remarquer est le réchauffement puis refroidissement qui se produit à l'emplacement du thermocouple~7, et dont le changement de sens se fait à $t=\qty{150}{\second}$, soit \qty{50}{\second} après le démarrage des sources acoustiques. À faible amplitude, cette tendance d'évolution est également visible, bien qu'étant plus faiblement marquée \echaf{à voir ce qu'on peut dire de ça à part que c'est un effet autre que la convection puisqu'indépendant de $\Delta T_{TA}$... }. 
 
 \begin{figure}[!ht]
     \centering
@@ -361,5 +361,5 @@ Les figures~\ref{fig:Acou_CHXin_H1H2_High}, \ref{fig:Acou_Regmid_H1H2_High} et \
 %\end{figure}
 
 \section{Conduction par les parois du régénérateur}
-La conduction par les parois du noyau thermoacoustique est un facteur très important à prendre en compte. En effet, lorsque le réfrigérateur fonctionne et qu'un gradient de température s'établit le long du régénérateur, un flux de chaleur \og retour \fg{} de conduction apparaît dans le sens opposé au flux de chaleur thermoacoustique. Cependant, contrairement au matériau poreux qui compose le régénérateur, il n'est pas nécessaire que les parois soit conductrice de chaleur. Dans cette section, la \textcolor{red}{canette/carter/boîte/enceinte} qui contient les disques de tissu métallique et qui est initialement usinée dans un cylindre d'acier inoxydable est remplacée par une pièce similaire imprimée en plastique. L'ABS est choisi pour la fabrication de ce nouveau contenant plutôt que le PLA, car ce dernier peut se ramollir sous l'action des températures atteintes dans certaines expériences, c'est-à-dire autour de \num{50} à \qty{60}{\degreeCelsius}. Dans le cas de l'ABS, cette température limite d'utilisation est élevée à \qty{100}{\degreeCelsius}.
+La conduction par les parois du noyau thermoacoustique est un facteur très important à prendre en compte. En effet, lorsque le réfrigérateur fonctionne et qu'un gradient de température s'établit le long du régénérateur, un flux de chaleur \og retour \fg{} de conduction apparaît dans le sens opposé au flux de chaleur thermoacoustique. Cependant, contrairement au matériau poreux qui compose le régénérateur, il n'est pas nécessaire que les parois soit conductrice de chaleur. Dans cette section, la \echaf{canette/carter/boîte/enceinte} qui contient les disques de tissu métallique et qui est initialement usinée dans un cylindre d'acier inoxydable est remplacée par une pièce similaire imprimée en plastique. L'ABS est choisi pour la fabrication de ce nouveau contenant plutôt que le PLA, car ce dernier peut se ramollir sous l'action des températures atteintes dans certaines expériences, c'est-à-dire autour de \num{50} à \qty{60}{\degreeCelsius}. Dans le cas de l'ABS, cette température limite d'utilisation est élevée à \qty{100}{\degreeCelsius}.
 
