--- a/tex/IndexNotations.tex
+++ b/tex/IndexNotations.tex
@@ -1,9 +1,7 @@
 \chapter{Index des notations}\label{chap:IndexNotations}%\addcontentsline{toc}{chapter}{\nameref{chap:IndexNotations}}
 
-\textcolor{red}{Taille de la 2\ieme{} colonne pour remplir la page + reparcourir manuscript pour vérifier que c'est complet et cohérent}
-
 \begin{center}
-    \begin{tabular}{p{.15\textwidth} p{.75\textwidth}}
+    \begin{longtable}{p{.15\textwidth} p{.75\textwidth}}
 %    	\hline
         \multicolumn{2}{c}{Lettres latines}  \\\hline
         \textbf{Symbole} & \textbf{Définition} \\\hline\hline
@@ -34,13 +32,11 @@
         $\mathbf{e}_x$ & Coordonnée axiale dans le noyau \\
         $Q_c$ & Flux de chaleur extrait par l'eau circulant dans l'échangeur ambiant \\
         $Q_f$ & Flux de chaleur apporté par les résistances chauffantes dans l'échangeur froid\\\hline
-    \end{tabular}
-\end{center}
+    \end{longtable}
 
-\newpage
+\bigskip
 
-\begin{center}
-    \begin{tabular}{p{.15\textwidth} p{.75\textwidth}}
+    \begin{longtable}{p{.15\textwidth} p{.75\textwidth}}
 %    	\hline
         \multicolumn{2}{c}{Lettres grecques \textcolor{red}{ordre alphabétique ?}}  \\\hline
         \textbf{Symbole} & \textbf{Définition} \\\hline\hline
@@ -59,22 +55,21 @@
         $\xi_0$ & Déplacement particulaire dans le régénérateur \\
         $\xi_1$ & Déplacement du piston de la source acoustique principale \\
         $\xi_2$ & Déplacement du piston de la source acoustique secondaire \\\hline
-    \end{tabular}
-\end{center}
+    \end{longtable}
 
 \bigskip
 
-\begin{center}
-    \begin{tabular}{p{.15\textwidth} p{.75\textwidth}}
+    \begin{longtable}{p{.15\textwidth} p{.75\textwidth}}
 %		\hline
 		\multicolumn{2}{c}{Indices et exposants}  \\\hline
 		\textbf{Symbole} & \textbf{Définition} \\\hline\hline
-		$\bullet^{\perp \mathbf g}$ & Perpendiculaire à la gravité $\mathbf g$ \\
-		$\bullet^{//~\mathbf g}$ & Parallèle à la gravité $\mathbf g$ \\
-		$\bullet^*$ & Conjugué complexe\\
-		$\bullet_p$ & Lié au matériau poreux\\		
-		$\bullet_g$ & Relatif au gaz dans le matériau poreux\\
-		$\bullet_s$ & Relatif au solide du matériau poreux\\
+		$\square_c$ & Caractéristique critique\\
+		$\square^{\perp \mathbf g}$ & Perpendiculaire à la gravité $\mathbf g$ \\
+		$\square^{//~\mathbf g}$ & Parallèle à la gravité $\mathbf g$ \\
+		$\square^*$ & Conjugué complexe\\
+		$\square_p$ & Lié au matériau poreux\\		
+		$\square_g$ & Relatif au gaz dans le matériau poreux\\
+		$\square_s$ & Relatif au solide du matériau poreux\\
 		\hline
-	\end{tabular}
+	\end{longtable}
 \end{center}
