--- a/tex/Introduction.tex
+++ b/tex/Introduction.tex
@@ -240,40 +240,46 @@ Le flux de chaleur thermoacoustique est donné par Swift \cite{swift_thermoacous
 
 \section{\'Etat de l'art}
 \subsection{De la recherche fondamentale...}
-L'effet thermoacoustique est un phénomène observé depuis les environs du I\ier{} siècle avant notre ère
+L'effet thermoacoustique est un phénomène observé depuis les environs du I\ier{} siècle avant notre ère \echaf{src souffleurs de verre + préparation du riz (cours Guillaume ?) ?}
 
-Depuis les années 1970-1980 durant lesquelles les premières machines modernes ont été mises au point, beaucoup de chemin a été parcouru. Le premier moteur à ondes progressives a été construit par Ceperley en 1979 \cite{ceperley_pistonless_1979}, et la première pompe à chaleur par Hofler lors de son doctorat en 1983 
+Depuis les années 1970-1980 durant lesquelles les premières machines modernes ont été mises au point, beaucoup de chemin a été parcouru. Le premier moteur à ondes progressives a été construit par Ceperley en 1979 \cite{ceperley_pistonless_1979}, et la première pompe à chaleur par Hofler lors de son doctorat en 1983 \echaf{src}
 
 \subsection{... à des applications industrielles}
-Les machines thermoacoustiques sont intéressantes pour l'industrie 
+Les machines thermoacoustiques sont intéressantes pour l'industrie \echaf{continuer avec cryocooler pour liquéfaction de gaz + TNO/BlueHeart ?}
 
 \section{Outils électroacoustiques pour la thermoacoustique}
-\subsection{Transduction électrodynamique}
-Un transducteur est un système qui convertit une forme d'énergie en une autre. En électroacoustique, les haut-parleurs transforment l'énergie électrique en énergie acoustique, ou inversement pour les microphones. Pour réaliser cette transduction, plusieurs technologies existent : électrodynamique, électrostatique...
-
-\begin{figure}[!ht]
-    \centering
-    \external{fig_HautParleur}
-%    \externalremake
-    \input{../fig/fig_HautParleur/tex/fig_HautParleur}
-    \caption{Vue en coupe d'un haut parleur électrodynamique}
-    \label{fig:HautParleur}
-\end{figure}
+%\subsection{Transduction électrodynamique}
+%Un transducteur est un système qui convertit une forme d'énergie en une autre. En électroacoustique, les haut-parleurs transforment l'énergie électrique en énergie acoustique, ou inversement pour les microphones. Pour réaliser cette transduction, plusieurs technologies existent : électrodynamique, électrostatique...
+%
+%\begin{figure}[!ht]
+%    \centering
+%    \external{fig_HautParleur}
+%%    \externalremake
+%    \input{../fig/fig_HautParleur/tex/fig_HautParleur}
+%    \caption{Vue en coupe d'un haut parleur électrodynamique}
+%    \label{fig:HautParleur}
+%\end{figure}
 
 \subsection{Modèles aux constantes localisées et circuits électriques équivalents}
 
 \subsubsection{En général}
 
-Dans l'hypothèse des très basses fréquences, soit lorsque $ka \ll 1$, il est possible de réaliser certaines approximations. L'impédance d'un tube ne comprend que sa composante inertielle, ce qui le rend analogue à une masse mécanique et à une inductance électrique. À l'inverse, une cavité voit son impédance ramenée à un ressort mécanique et un condensateur électrique. Ainsi, les systèmes électro-mécano-acoustiques comme les haut-parleurs ou les guides d'ondes peuvent être modélisés au moyen d'un circuit électrique équivalent. Le circuit équivalent au haut-parleur électrodynamique est présenté figure~\ref{fig:HP_LEM}.
+Dans l'hypothèse des très basses fréquences, soit lorsque $ka \ll 1$, il est possible de réaliser certaines approximations. L'impédance d'un tube ne comprend que sa composante inertielle, ce qui le rend analogue à une masse mécanique et à une inductance électrique. À l'inverse, une cavité voit son impédance ramenée à un ressort mécanique et un condensateur électrique. Ainsi, les systèmes électro-mécano-acoustiques comme les haut-parleurs ou les guides d'ondes peuvent être modélisés au moyen d'un circuit électrique équivalent. 
+%Le circuit équivalent au haut-parleur électrodynamique est présenté figure~\ref{fig:HP_LEM}.
+%
+%\begin{figure}[!ht]
+%    \centering
+%    \external{fig_HP_LEM}
+%%    \externalremake
+%    \input{../fig/fig_HP_LEM/tex/fig_HP_LEM}
+%    \caption{Circuit électrique équivalent à un haut-parleur suivant un modèle aux constantes localisées (convention mécanique impédance)}
+%    \label{fig:HP_LEM}
+%\end{figure}
 
-\begin{figure}[!ht]
-    \centering
-    \external{fig_HP_LEM}
-%    \externalremake
-    \input{../fig/fig_HP_LEM/tex/fig_HP_LEM}
-    \caption{Circuit électrique équivalent à un haut-parleur suivant un modèle aux constantes localisées (convention mécanique impédance)}
-    \label{fig:HP_LEM}
-\end{figure}
+\paragraph{Analogies électro-mécaniques}
+\echaf{ajouter schémas du grain 24} \cite{Electroac_Grains}
+
+\paragraph{Analogies acousto-mécaniques}
 
 \subsubsection{Circuit électrique équivalent à un noyau thermoacoustique}
 
