--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreH2.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreH2.tex
@@ -45,11 +45,11 @@
 
 		\foreach \z [evaluate=\z] in {0,...,4}{
 			\foreach \r [evaluate=\r as \num using int(\r+1 + 3*\z)] in {0,...,2}{
-				\draw ({\decalage+.5+\L-\z*(1+\L)/4},{-(\R-.4)/2*\r+\R-.2}) node(n\z\r){\scriptsize \num};
+				\draw ({\decalage+.5+\L-\z*(1+\L)/4},{-(\R-.4)/2*\r+\R-.2}) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(n\z\r){\scriptsize \num};
 }}
 
 %		\draw (n01.east) node [right]{$\rightarrow$ \begin{tabular}{l}Source\\acoustique\\principale\end{tabular}};
-		\draw ($(n01)+(1,0)$) node {\scriptsize 0} node[anchor=west]{\begin{tabular}{rl}
+		\draw ($(n01)+(1,0)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node {\scriptsize 0} node[anchor=west]{\begin{tabular}{rl}
 		& Src\\
 		$\rightarrow$ & ac\\
 		& princ
@@ -57,5 +57,7 @@
 		\draw (n30.north west) node [above]{Ambiant};
 		\draw (n10.north east) node [above]{Froid};
 	\end{scope}
+	
+	
 		
 \end{tikzpicture}
