--- a/fig/fig_OrientationCore/tex/subfig_OrientationCoreV2.tex
+++ b/fig/fig_OrientationCore/tex/subfig_OrientationCoreV2.tex
@@ -39,10 +39,10 @@
 
 		\foreach \z [evaluate=\z] in {0,...,4}{
 			\foreach \r [evaluate=\r as \num using int(\r+1 + 3*\z)] in {0,...,2}{
-				\draw ({(\R-.4)/2*\r+.2},{-\z*(1+\L)/4+\L+.5}) node(n\z\r){\scriptsize \num};
+				\draw ({(\R-.4)/2*\r+.2},{-\z*(1+\L)/4+\L+.5}) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(n\z\r){\scriptsize \num};
 }}
 
-		\draw ($(n01.north)+(0,.5cm)$) node(RIX){\scriptsize 0} node[anchor=south]{\begin{tabular}{c}
+		\draw ($(n01.north)+(0,.5cm)$) node[minimum size=10pt,draw,circle,fill=white,opacity=.7,text opacity=1]{} node(RIX){\scriptsize 0} node[anchor=south]{\begin{tabular}{c}
 		Source acoustique principale\\
 		$\uparrow$
 		\end{tabular}};
