--- a/fig/fig_TACOTSchematics/tex/fig_TACOTSchematics.tex
+++ b/fig/fig_TACOTSchematics/tex/fig_TACOTSchematics.tex
@@ -10,7 +10,7 @@
 %		\draw[help lines,xstep=.1,ystep=.1] (0,0) grid (1,1);
 %		\fill[orange, rounded corners, opacity=1,draw=orange] (.46,.65) -- ++(132:.09) -- ++(0,-.44) -- ++(48:.09) -- cycle;
 		\draw[MatlabYellow,rounded corners,very thick,preaction={fill=MatlabYellow!20,opacity=.5}] (.46,.65) -- ++(132:.09) -- ++(-.03,0) -- ++(0,-.44) --++(.03,0) -- ++(48:.09) -- cycle; %node[left,pos=.5,label={[rotate=90]center:Cavité}]{};
-		\draw[MatlabYellow] (.415,0.5) node [label={[rotate=90]center:\shortstack{\textbf{Cavité}\\\textbf{d'adaptation}}}]{};
+		\draw[MatlabYellow] (.415,0.5) node [label={[rotate=90]center:\shortstack{\textbf{Volume}\\\textbf{d'adaptation}}}]{};
 		
 %		\draw[blue] (.5,.5) node [anchor=center, preaction={fill=black!20,opacity=.7}] {RIX};
 %		\draw[red] (.33,.5) node [anchor=center, preaction={fill=black!20,opacity=.7}] {TA core};	
