--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -40,7 +40,7 @@
 \renewcommand{\thesubsection}{\thesection.\arabic{subsection}}
 
 
-\newcommand{\echaf}[1]{\textcolor{red}{#1}}
+\newcommand{\echaf}[1]{\textcolor{red}{\{#1\}}}
 %---------------------------------------------------------------------%
 % PACKAGES
 %---------------------------------------------------------------------
@@ -48,7 +48,7 @@
 	\vfill
 	\hrule \vspace{.5cm}
 	{\hypersetup{linkcolor = black}
-	\localtableofcontents
+		\localtableofcontents
 	}%
 	\vspace{.5cm} \hrule
 	\vfill
@@ -58,12 +58,14 @@
 \usepackage[french]{babel}
 \usepackage{csquotes}
 \usepackage{wrapfig}
+\usepackage{comment}
 \usepackage{multicol}
 \usepackage{array}
 	\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 	\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 	\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 	\setlength{\extrarowheight}{5pt}
+\usepackage{longtable}
 \usepackage{arydshln}
 	\setlength\dashlinedash{1pt}
 	\setlength\dashlinegap{1.5pt}
@@ -215,7 +217,7 @@
 	\usetikzlibrary{calc,shadows,matrix}
 	\usetikzlibrary{decorations.pathreplacing}
 	\usetikzlibrary{automata,positioning}
-	\usetikzlibrary{math}
+	\usetikzlibrary{math,fit}
 	\usetikzlibrary{fadings,shadings}
 	\tikzset{>=latex}
 	\tikzset{arw/.style={>={latex[length=3mm,width=5mm]},line width=2mm,draw=gray}}
@@ -287,7 +289,7 @@
         \hrule
     \vfill
 }%vertically center text
-\author{\begin{tabular}{rl}
+\author{\begin{tabular}{r @{ } l}
 Auteur : & Martin Fontbonne\\
 Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
 	& Jean-Christophe Valière, \textit{Université de Poitiers}\\
@@ -304,13 +306,13 @@ Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
 \maketitle
 \cleardoublepage
 
-\input{Citations}
-
-\input{Remerciements}
+%\input{Citations}
+%
+%\input{Remerciements}
 %\newpage
 
 {\hypersetup{linkcolor = black}
-\tableofcontents\label{chap:tableofcontents}\addcontentsline{toc}{chapter}{\nameref{chap:tableofcontents}}%\mtcaddchapter
+\tableofcontents%\label{chap:tableofcontents}\addcontentsline{toc}{chapter}{\nameref{chap:tableofcontents}}%\mtcaddchapter
 %\newpage
 
 \listoffigures\label{chap:listoffigures}\addcontentsline{toc}{chapter}{\nameref{chap:listoffigures}}
@@ -341,7 +343,7 @@ Encadrants : & Hélène Bailliet, \textit{Université de Poitiers}\\
 
 %\input{InstabiliteCentreNoyau}
 
-\input{EtudeTheoriqueSimus}
+%\input{EtudeTheoriqueSimus}
 
 
 
